assets/css/shortcut.css
/* tricks */
/* general */
body {
  background-image: url(../img/pattern.png);
  color: #444;
  font-size: 14px;
  padding-bottom: 20px;
  -webkit-font-smoothing: antialiased;
}

.about_team {
  padding:50px 0;
  background-color:#e5e5e3;
}

.create_shortcut {
  background-color: #636363;
  padding: 35px 0 50px;
  text-align: center;
}
.create_shortcut h1 {
  color: #F2F2F2;
  font-weight: bold;
  font-size: 3.5rem;
}

.create_shortcut p {
  color: #bbb;
  font-size: 2rem;
}

.customers {
  width: 90%;
  height: 90%;
  display: block;
  margin: 10px;
}

#how-it-works {
  background: #FFFFFF;
  padding: 5rem 0;
}

#customers {
  background: #FFFFFF;
  padding: 5rem 0;
}

#customers p {
  padding-bottom: 3rem;
}

.navbar {
   background-color: transparent;
   background: transparent;
   border-color: transparent;
   height:70px;
}
.navbar-header {
  height:70px;
}

/* opaque class which will be attached on scroll */

.navbar.opaque {
  background-color: #303030;
  background: #303030;
  transition: background-color 0.5s ease 0s; /* Transition effect to make it fade in (optional) */
}

.navbar li { color: #000 } 
.navbar li a {
  padding-top: 22px;
}
.navbar-toggle {
    position: relative;
    float: right;
    padding: 9px 10px;
    margin-top: 18px;
    margin-right: 15px;
    margin-bottom: 8px;
    background-image: none;
    border: 1px solid transparent;
    border-radius: 4px;
}
.navbar-toggle .icon-bar {
    display: block;
    width: 22px;
    height: 2px;
    border-radius: 1px;
    background-color: #fc0 /* change this to any color you want! */;
}

.navbar-header a img {
  width:150px;
  height:50px;
  margin-top: -6px;
}

.navbar-inverse .navbar-nav > li > a {
  font-size: 2rem;
}

.navbar-inverse .navbar-nav a.btn.btn-lg.btn-primary {
  background: transparent;
  color: #FF6600;
  border: 1px solid #FF6600;
  text-align: center;
  min-width: 120px;
  height: 3.0rem;
  font-weight: normal;
  white-space: nowrap;
  margin-top: 18px;
  font-size: 2rem;
  padding-top: 3px;
  
}

.navbar-inverse .navbar-nav a.btn.btn-lg.btn-primary:hover {
  color: #FF6600;
  background-color: rgba(255, 102, 0, 0.2);
  border: 1px solid #FF6600;
}

.navbar-inverse .navbar-nav .btn-primary {
	color: #F2F2F2;
  border-color: #fff; 
}


.create_shortcut a.btn.btn-lg.btn-primary {
  background: transparent;
  color: #FF6600;
  border: 2px solid #FF6600;
  text-align: center;
  min-width: 250px;
  font-weight: bold;
  white-space: nowrap;
  margin-top: 3rem;
  font-size: 2.5rem;
}

.create_shortcut a.btn.btn-lg.btn-primary:hover {
  color: #FF6600;
  background-color: rgba(255, 102, 0, 0.2);
  border: 2px solid #FF6600;
}

.create_shortcut .btn-primary {
	color: #F2F2F2;
  border-color: #fff; 
  
}


.container-fluid {
  max-width: 970px;
  .center-block();
}

.tab-pane {
  background-color:#ffffff;
}

.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
  color: #fff;
  background-color: #FF6600;
}

.subscribe {
  padding: 10px 0;
}
#mc_embed_signup{
  padding: 20px 0 10px;
}

h1,
h2,
h3,
h4 {
  -webkit-font-smoothing: antialiased;
  font-weight: normal;
  /*text-shadow: 0px 1px 0px #ffffff;*/
}
h2 {
  font-size: 30px;
  line-height: 40px;
  font-weight: 500;
}
h2 small {
  color: #444;
}
h3 {
  font-size: 22px;
  line-height: 26px;
  font-weight: 500;
}
h4 {
  font-size: 18px;
  line-height: 22px;
  font-weight: 500;
  margin-bottom: 10px;
}
h4 span {
  color: #999;
}
p, li {
  font-size: 18px;
  line-height: 22px;
  margin-bottom: 15px;
}
a {
  color: #ff6600;
}
a:hover {
  color: #ff6600;
}
hr {
  margin: 17px 0 20px;
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #fff;
}
.light {
  color: #999;
}
.margin0 {
  margin: 0px !important;
}
.mtop10 {
  margin-top: 10px;
}
.mtop20 {
  margin-top: 20px;
}
.mtop40 {
  margin-top: 40px;
}
.mtop60 {
  margin-top: 60px;
}
.mleft20 {
  margin-left: 20px;
}
.mleft40 {
  margin-left: 40px;
}
.mright20 {
  margin-right: 20px;
}
.mbottom10 {
  margin-bottom: 10px;
}
.mbottom20 {
  margin-bottom: 20px;
}
.mbottom40 {
  margin-bottom: 40px;
}
.mbottom60 {
  margin-bottom: 60px;
}

.paddingl10 {
  padding-left: 10px;
}
.line30 {
  line-height: 30px;
}
img.circle {
  -webkit-border-radius: 100px;
  -moz-border-radius: 100px;
  border-radius: 100px;
  -moz-background-clip: padding-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
}
img.shadow {
  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
}
img.border {
  border: 2px solid white;
}
/* interaction elements */
.btn {
  background: #ff6600;
  color: #fff;
  border: none;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  -moz-background-clip: padding-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  font-weight: bold;
  text-shadow: none;
  font-size: 16px;
  padding: 10px 20px;
  -webkit-font-smoothing: antialiased;
  -webkit-transition: background 0.5s linear;
  -moz-transition: background 0.5s linear;
  -ms-transition: background 0.5s linear;
  -o-transition: background 0.5s linear;
  transition: background 0.5s linear;
}
.btn:hover {
  background: #e65c00;
  color: #fff;
  -webkit-transition: background 0.5s linear;
  -moz-transition: background 0.5s linear;
  -ms-transition: background 0.5s linear;
  -o-transition: background 0.5s linear;
  transition: background 0.5s linear;
}
.btn-large {
  padding: 13px 40px 16px;
  font-size: 20px;
}
/* navigation */
.navbar-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
  padding-top: 12px;
  -webkit-transition: background 0.5s linear;
  -moz-transition: background 0.5s linear;
  -ms-transition: background 0.5s linear;
  -o-transition: background 0.5s linear;
  transition: background 0.5s linear;
}
/* ... */

